# VMSAM

./: .gitignore  .project  .pydevproject  AGENTS.md  Cargo.toml  Dockerfile  ML_ENHANCEMENTS.md  README.md  README_ENHANCED.md  TESTING_GUIDE.md  docker-compose.yml  init.sh  run.sh
.forgejo/workflows/: update-readme-each-month.yml
.github/workflows/: docker-publish.yml
src/: api.rs  audioCorrelation.py  chimeric_processor.py  config.ini  config.json  config.py  delayUncertainty.py  delay_uncertainty_analyzer.py  enhanced_frame_compare.py  enhanced_merge_video.py  folder_generator.py  frame_compare.py  gestionar_show.py  gestionar_show_api.py  gestionar_show_model.py  get_cut_time.py  infinite_wrapper.py  lib.rs  main.py  main.rs  main_gestionar_show.py  mergeVideo.py  mergeVideoEnhanced.py  mergeVideo_enhanced.py  ml_scene_detection.py  ml_validation.py  param_template.json  sceneDetection.py  scene_analyzer.py  scene_detection.py  scene_detector.py  titles_subs_group.json  tools.py  video.py
src/gestionar_movie/: api.py  model.py
src/gestionar_show/: api.py  model.py
src/tools/: database.py
static/: app.js  index.html  style.css
tests/: test_chimeric_processing.py  test_mergeVideo.py
