[package]
name = "audio_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
hound = "3.4"
rustfft = "6.0"
num-complex = "0.4"
tempfile = "3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
uuid = { version = "1.4", features = ["v4"] }