[package]
name = "vmsam-web"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = { version = "1.3", features = ["static-files", "anyhow"] }
poem-openapi = { version = "2.0", features = ["swagger-ui"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
# For file system operations if async is needed, though std::fs often suffices for simple reads
tokio-stream = "0.1" 
futures-util = "0.3" 
